test_case/rust-lang_rust/54099_419924470.rs
rust
type __ = isize; //~ ERROR type `__` should have a camel case name such as `CamelCase`
